k3s/manifests/jellyfin/metube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metube
  namespace: jellyfin
spec:
  type: ClusterIP
  selector:
    app: metube
  ports:
    - port: 8081
      targetPort: 8081
      name: http
